Fix path images, update patters style on mobile device

--- a/css/medanswers.css
+++ b/css/medanswers.css
@@ -53,28 +53,42 @@ body {
 }
 .pattern--top-left:before {
   background-image: url(../images/design/misc/pattern.svg);
-  background-position: 250px -232px;
+  background-position: 150px -232px;
   content: "";
   display: block;
-  height: 250px;
+  height: 150px;
   left: 0;
   position: absolute;
   top: 0;
-  width: 250px;
+  width: 150px;
+}
+@media (min-width: 600px) {
+  .pattern--top-left:before {
+    height: 250px;
+    width: 250px;
+    background-position: 250px -232px;
+  }
 }
 .section.pattern--bottom-right {
   padding-bottom: 100px;
 }
 .pattern--bottom-right:after {
   background-image: url(../images/design/misc/pattern.svg);
-  background-position: 0 500px;
+  background-position: -150px 515px;
   bottom: 0;
   content: "";
   display: block;
-  height: 250px;
+  height: 150px;
   position: absolute;
   right: 0;
-  width: 250px;
+  width: 150px;
+}
+@media (min-width: 600px) {
+  .pattern--bottom-right:after {
+    background-position: 0 500px;
+    height: 250px;
+    width: 250px;
+  }
 }
 .comming-soon {
   color: #00D775;
